Make cloudinary do all the heacy lifting on grayscale images, rather than handle this in css

--- a/pages/blog/2021/06/growth-at-vercel.mdx
+++ b/pages/blog/2021/06/growth-at-vercel.mdx
@@ -2,7 +2,7 @@ import BlogPost from 'components/layouts/blog/Blog'
 
 export const meta = {
     title: 'Growth At Vercel',
-    description: 'As part of a leadership team exercise, I followed the Clifton StrengsFinder assessment to find out more about where my skills lie as a lead.',
+    description: 'Having recently moved to Vercel, I thought I would piggy-back on yesterday\'s anouncement of a new funding round to talk a little about why I made this move.',
     date: '2021-06-24',
     image: 'growth.jpg',
     author: {
@@ -14,4 +14,13 @@ export const meta = {
 
 export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
-## Some Content Here
+## Recent History
+
+I am very lucky in that I have never worked anywhere mediocre in my career. Every company I have worked for has been a pioneer in their field. My own role in those businesses has been varied: engineer, engineering manager, manager-of-managers, regional director, company director... and often a combination of the above.
+
+Two things in common with all these roles. I was working with:
+
+- Excellent people...
+- ...challenging what was thought to be possible.
+
+I learned a lot from all of these roles. A lot about engineering and engineers. About businesses and how they function. About leadership. About myself and what I like in my career.
