Stoppoing for a break

--- a/pages/blog/2021/06/growth-at-vercel.mdx
+++ b/pages/blog/2021/06/growth-at-vercel.mdx
@@ -24,3 +24,33 @@ Two things in common with all these roles. I was working with:
 - ...challenging what was thought to be possible.
 
 I learned a lot from all of these roles. A lot about engineering and engineers. About businesses and how they function. About leadership. About myself and what I like in my career.
+
+My most-recent work has been particularly satisfying. These positions have been more like a "mini-CEO" than an engineering manager; I have been not just managing engineering managers, but also collaborating on product management, legal issues, accounting, employer branding, hiring, budget... At Scout24 I was also involved with acquisitions. This variety was a lot of fun and tied together by breadth of experience nicely.
+
+![Vercel and Next.js](vercel-next.png)
+
+Joining Vercel was a tough decision; I was having a lot of fun at Scout24. But Vercel was offering something special that, ultimately, was hard to say "No" to - the chance to lead their German subsidiary. This tied together all these things I had been enjoying recently, in the context of a Silicon Valley unicorn. Yes, plz.
+
+## Vercel's Goals
+
+On the back of [yesterday's anouncement](https://vercel.com/blog/series-c-102m-continue-building-the-next-web) Guillermo blogged his own thoughts on this milestone and took a moment to remind us all of Vercel's goals:
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">We <a href="https://twitter.com/vercel?ref_src=twsrc%5Etfw">@vercel</a> just raised a $102M Series C @ 1.1B on our mission to help build a faster Web, made for everyone.<br/><br/>Our goals:<br/>1️⃣ Build the SDK for Web<br/>2️⃣ Lower the barrier of entry<br/>3️⃣ Focus on the end-user<a href="https://t.co/lRhHrjNFev">https://t.co/lRhHrjNFev</a></p>&mdash; Guillermo Rauch (@rauchg) <a href="https://twitter.com/rauchg/status/1407716317507948549?ref_src=twsrc%5Etfw">June 23, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+I thought I'd take a moment to talk a little about my thoughts on these and how they attracted me to Vercel.
+
+### Build The SDK For Web
+
+For me, the crucial word here is _"the"_. There is no interest here in being one of many. We want to be the first choice for moden web development. I am a huge fan of competition: it drives innovation and lowers costs, typically. In the front-end development space there is no shortage of options for building your modern web app. The Vercel platform supports many of them: Gatsby, Vue, Angular, Nuxt.js, React.
+
+Of course, Vercel has its own framework: Next.js. Next is built on top of React; a highly powerful framework in its own right. However, where React focuses on components, Next adds additional abstraction to introduce the a page-based concept. Next.js, in the contest of the Vercel platform, is an incredibly powerful combination.
+
+Ultimtely, it is through providing seamless integration between framework and platform that we will deliver on this goal.
+
+### Lower The Barrier Of Entry
+
+Vercel's products are designed to make life better for front-end developers. "Better" can be measured in a few ways, but at Vercel we focus on one specific metric: speed. We want to build a better web, faster.
+
+With this in mind, developer experience is everything. After all, developers are the user. 
+
+### Focus On The End-User
