First draft complete

--- a/pages/blog/2021/06/growth-at-vercel.mdx
+++ b/pages/blog/2021/06/growth-at-vercel.mdx
@@ -35,9 +35,11 @@ Joining Vercel was a tough decision; I was having a lot of fun at Scout24. But V
 
 On the back of [yesterday's anouncement](https://vercel.com/blog/series-c-102m-continue-building-the-next-web) Guillermo blogged his own thoughts on this milestone and took a moment to remind us all of Vercel's goals:
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">We <a href="https://twitter.com/vercel?ref_src=twsrc%5Etfw">@vercel</a> just raised a $102M Series C @ 1.1B on our mission to help build a faster Web, made for everyone.<br/><br/>Our goals:<br/>1️⃣ Build the SDK for Web<br/>2️⃣ Lower the barrier of entry<br/>3️⃣ Focus on the end-user<a href="https://t.co/lRhHrjNFev">https://t.co/lRhHrjNFev</a></p>&mdash; Guillermo Rauch (@rauchg) <a href="https://twitter.com/rauchg/status/1407716317507948549?ref_src=twsrc%5Etfw">June 23, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+- Build The SDK For Web
+- Lower The Barrier Of Entry
+- Focus On The End-User
 
-I thought I'd take a moment to talk a little about my thoughts on these and how they attracted me to Vercel.
+I thought I'd take a moment to talk a little about my thoughts on these and how they attracted me to Vercel. **Note:** These are _my_ thoughts and don't necesarilly reflect the views of Vercel.
 
 ### Build The SDK For Web
 
@@ -51,6 +53,42 @@ Ultimtely, it is through providing seamless integration between framework and pl
 
 Vercel's products are designed to make life better for front-end developers. "Better" can be measured in a few ways, but at Vercel we focus on one specific metric: speed. We want to build a better web, faster.
 
-With this in mind, developer experience is everything. After all, developers are the user. 
+With this in mind, developer experience is everything. After all, developers _are_ the user.
+
+Speed is always important for developers. What do they want to be faster? Well... pretty much everything:
+
+- Builds
+- Deployments
+- Feedback loops from their team...
+
+For me the last of these is the next crucial step for Vercel.
+
+At our recent [special event](https://nextjs.org/conf#room-nz80b) we launched the next major update to Next.js: Next.js 11, including [Next Live](https://nextjs.org/live). Next.js is the ultimate expression of fast feedback loops - realtime collraboration with all your team mates, in the browser.
+
+This technology will lower the barrier for _all_ team members. So now it will be easier for everyone, not just your engineers, to collaborate and contribute to the development of amazing websites. With features such as chat and drawing, it will be extremely simple for, say, designers to point things out and work with the engineers to make the crucial changes for delighting users.
 
 ### Focus On The End-User
+
+I once remember having a great conversation with my main man, [Mikio Braun](https://twitter.com/mikiobraun). We were both working in [Zalando](https://zalando.de)'s search department. Something that both Mikio and I were constantly having to reminds our teams is that the end-user _is_ the end-user.
+
+OK, arguably this is a little tautological. But stick with me for a moment...
+
+Mikio and I were both leading teams whose customer was basically another team inside Zalando. In such an environment, it is easy to mistake that other internal team as the end-user. Nope. The end-user is someone shopping on Zalando for an awesome pair of shoes.
+
+_That_ is the person you should always have in mind.
+
+At Vercel we think in kinda the same way. Our products are used by software engineers, but the end-user is the end-user. We need to remeber that and give them what **they** want. 
+
+And what do they want?
+
+Speed. Security. SEO? All of these. And more.
+
+## My Goals
+
+Like all the roles I take on, working at Vercel is an opportunity for me to grow. What's particularly fun is returning to a startup to grow as it does. I bring a lot of experience and I'm looking forward to using that in support of Vercel's goals.
+
+At this point, I really only have one personal goal: to finally pivot from engineering management into business leadership.
+
+As I said previously, I have spent a lot of time doing a mixture of these. I want to stay in the technology industry because, after all, I _am_ an engineer and the experience of being an engineer will help me to be an effective business leader in the tech space. I have always (and continue) to love working with engineers. But I've learned that working with lawyers is also cool. And marketing teams. And sales teams. And... And...
+
+So bring on the variety! I'm here to help.
