--- a/pages/blog/2018/01/habitat-php.mdx
+++ b/pages/blog/2018/01/habitat-php.mdx
@@ -7,7 +7,7 @@ export const meta = {
     category: 'open source',
     description: 'It turns out that packaging PHP applications for Habitat really is a little fiddly. Here is my work-in-progress for Drupal.',
     date: '2018-01-22',
-    image: 'core.webp',
+    image: 'core2.jpg',
     author: {
         name: 'Paul Adams',
         avatar: 'paul.png',
