--- a/pages/blog/2021/06/hero-we-need.mdx
+++ b/pages/blog/2021/06/hero-we-need.mdx
@@ -139,6 +139,6 @@ Simeple as that. Should have guessed there would be a library providing a React 
 
 ## Not All Heroes...
 
-So that's about it for all the pertinent details. You can find the complete code [over here at GitHub](https://github.com/therealpadams/baggerspion/blob/main/components/sections/home/Hero.js). I **am** strangle proud of this... purely because it works. However, as someone new to Next.js (Jasvscript **and** frontend in general!), I appreciate this is probably not the most elegant solution!
+So that's about it for all the pertinent details. You can find the complete code [over here at GitHub](https://github.com/therealpadams/baggerspion/blob/main/components/sections/home/Hero.js). I **am** strangely proud of this... purely because it works. However, as someone new to Next.js (Jasvscript **and** frontend in general!), I appreciate this is probably not the most elegant solution!
 
 Maybe someone might find this useful. Feel free to submit a PR, if you are totally offended by my coding nonsense.
