--- a/pages/blog/2021/06/hero-we-need.mdx
+++ b/pages/blog/2021/06/hero-we-need.mdx
@@ -145,7 +145,7 @@ Maybe someone might find this useful. Feel free to submit a PR, if you are total
 
 ## Update (30. June, 2021)
 
-As of version 2.1, TailwindCSS absolutely does support arbitrary pixel values, thanks to the new [JIT mode](https://tailwindcss.com/docs/just-in-time-mode). So, instead of the clunky inline style, I can set the height oif the hero as follows:
+As of version 2.1, TailwindCSS absolutely does support arbitrary pixel values, thanks to the new [JIT mode](https://tailwindcss.com/docs/just-in-time-mode). So, instead of the clunky inline style, I can set the height of the hero as follows:
 
 ```html
 <div className="relative h-[400px] w-full">
