--- a/pages/blog/2021/07/on-being-junior.mdx
+++ b/pages/blog/2021/07/on-being-junior.mdx
@@ -50,7 +50,7 @@ So Gareth used the moment to give some highly valuable experience to some junior
 
 To top it all off, it was Gareth who took responsibility for the missed opportunity for glory. In pretty much and press coverage of the game you see today, the message is clear: Gareth failed, not the team.
 
-Nice of him. But, I really don't think he failed at all.
+Nice of him. But, I really don't think he failed at all. Quite the opposite.
 
 ## OK, Back To Software Engineering
 
